# sosgame

./: .gitignore  README.md  sos.cabal
src/: Main.hs
src/SOS/: Game.hs  Player.hs
