name:                sosGame
version:             0.1
synopsis:            SOS game
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Onur Ozduygu
maintainer:          onur.zdg@gmail.com
copyright:           2016, Onur Ozduygu
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sosGame
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base                        >= 4.8 && < 5,
    containers                  <= 0.6,
    lens                        < 4.9,
    mtl                         >= 2       && < 3,
    random                      == 1.1.*,
    safe                        < 0.4,
    text                        >= 0.11    && < 1.3

